Add: Docker compose

--- a/exchange_matching/docker-deploy/docker-compose.yml
+++ b/exchange_matching/docker-deploy/docker-compose.yml
@@ -1,15 +1,26 @@
 version: '2'
 
-services: 
-  proxy: 
+services:
+  stock_db:
+    restart: always
+    image: postgres
+    environment:
+        - POSTGRES_DB=postgres
+        - POSTGRES_USER=postgres
+        - POSTGRES_PASSWORD=passw0rd    
+    expose:
+      - "5432"
+    ports:
+      - "54321:5432"
+
+  exchange_matching:
     build: ./src
-    command: bash -c "./run.sh"
-    volumes: 
-     - ./src:/code
-    ports: 
-     - "12345:12345"
-    tty: true
-
-volumes: 
-  data-volume: 
-
+    command: ./exchange_matching
+    volumes:
+      - ./src:/code
+    expose:
+      - "12345"
+    ports:
+      - "12345:12345"
+    depends_on:
+      - stock_db
