--- a/exchange_matching/docker-deploy/src/Dockerfile
+++ b/exchange_matching/docker-deploy/src/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:20.04
 RUN apt-get update
 RUN apt-get install -y g++ make
+RUN apt-get install -y libpq-dev
 RUN mkdir /code
 WORKDIR /code
 ADD . /code/
-RUN chmod +x run.sh
